# drf-api

./: db.sqlite3  docker-compose.yml  pyproject.toml
coffehouseapi_project/: settings.py  urls.py
coffehouseapp/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
